--- a/to-do.css
+++ b/to-do.css
@@ -21,7 +21,7 @@ input {
     border: 2px solid gold;
     border-radius: 5px;
 }
-button {
+.container button {
     padding: 10px;
     border: none;
     background: #28a745;
