--- a/to-do.css
+++ b/to-do.css
@@ -6,23 +6,37 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: slategray;
     text-align: center;
+    width: 100%;
+    height: 100vh;
 }
 .container {
     max-width: 400px;
-    margin: 50px auto;
+    margin: 137px auto;
     padding: 20px;
     background: white;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
 }
-input {
-    width: 70%;
-    padding: 10px;
-    margin-right: 10px;
+.to-do-list {
+    width: 100%;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    border: 1px solid #d3d3d3;
+}
+.to-do-list h2 {
+    padding: 10x;
+}
+.to-do-list input {
+    width: 250px;
+    padding: 5px;
     border: 2px solid gold;
     border-radius: 5px;
 }
-.container button {
-    padding: 10px;
+.to-do-list button {
+    width: fit-content;
+    padding: 5px;
     border: none;
     background: #28a745;
     color: white;
@@ -46,11 +60,3 @@ li {
     text-decoration: line-through;
     color: gray;
 }
-.remove-btn {
-    background: red;
-    color:  white;
-    border: none;
-    padding: 5px;
-    cursor: pointer;
-}
-
