--- a/to-do.css
+++ b/to-do.css
@@ -57,6 +57,6 @@ li {
 }
 .to-do-list li {
     font-size: small;
-    background-color: whitesmoke;
+    background: whitesmoke;
     padding: 20px;
 }
