--- a/to-do.css
+++ b/to-do.css
@@ -56,7 +56,7 @@ li {
     list-style: none;
 }
 .to-do-list li {
-    font-size: small;
+    font-size: larger;
     background: whitesmoke;
     padding: 20px;
 }
