--- a/to-do.css
+++ b/to-do.css
@@ -45,8 +45,8 @@ li {
     flex: 1;
     margin: 0 10px;
     word-break: break-word;
-    font-size: larger;
-    color: darkslateblue;
+    font-size: 2rem;
+    color: purple;
 }
 .delete-btn {
     background-color: blueviolet;
