--- a/to-do.css
+++ b/to-do.css
@@ -45,8 +45,8 @@ li {
     flex: 1;
     margin: 0 10px;
     word-break: break-word;
-    font-size: 2rem;
-    color: purple;
+    font-size: larger;
+    color: darkslategray;
 }
 .delete-btn {
     background-color: blueviolet;
@@ -59,5 +59,5 @@ li {
 }
 .completed {
     text-decoration: line-through;
-    color: gray;
+    color: purple;
 }
