--- a/to-do.css
+++ b/to-do.css
@@ -45,7 +45,6 @@ li {
     flex: 1;
     margin: 0 10px;
     word-break: break-word;
-    font-size: larger;
     color: darkslategray;
 }
 .delete-btn {
@@ -60,4 +59,5 @@ li {
 .completed {
     text-decoration: line-through;
     color: purple;
+    font-size: 1.5rem;
 }
