--- a/to-do.css
+++ b/to-do.css
@@ -45,6 +45,7 @@ li {
     flex: 1;
     margin: 0 10px;
     word-break: break-word;
+    font-size: larger;
     color: darkslategray;
 }
 .delete-btn {
