--- a/to-do.css
+++ b/to-do.css
@@ -24,7 +24,8 @@ input[type="text"], button {
 }
 button {
     margin-right: 10px;
-    font-size: 1rem;
+    background-color: mediumspringgreen;
+    font-size: 1.5rem;
     color: darkslategray;
 }
 ul {
