--- a/to-do.css
+++ b/to-do.css
@@ -25,7 +25,8 @@ input[type="text"], button {
 button {
     margin-right: 10px;
     background-color: mediumspringgreen;
-    color: darkslategray;
+    color: purple;
+    font-weight: bolder;
 }
 ul {
     list-style: none;
