--- a/to-do.css
+++ b/to-do.css
@@ -46,7 +46,7 @@ li {
     flex: 1;
     margin: 0 10px;
     word-break: break-word;
-    font-size: 1.5rem;
+    font-size: larger;
     color: purple;
 }
 .delete-btn {
