--- a/to-do.css
+++ b/to-do.css
@@ -46,8 +46,7 @@ li {
     flex: 1;
     margin: 0 10px;
     word-break: break-word;
-    font-size: larger;
-    color: purple;
+    color: darkslategray;
 }
 .delete-btn {
     background-color: blueviolet;
